# ray-tracing-rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  entity.rs  main.rs  ray.rs  utils.rs
src/entity/: geometry.rs  material.rs  sphere.rs  visible.rs
src/entity/geometry/: sphere.rs
src/entity/material/: dielectric.rs  lambertian.rs  metal.rs
